# test

./: .~lock.presentation_slides.pptx#  Master_Stock_Picks_Report.md  consolidated_masterclass_plan.md  gmsk_training.md  hammerdin_farm.html  hardware_blueprint.md  masterclass_slides.pptx  presentation_script.md  presentation_slides.md  presentation_slides.pptx  vanguard_bootstrap.sh
iqgen/: pyproject.toml
iqgen/config/: iq_generator.yaml
iqgen/iqgen/: __init__.py  __main__.py  config.py  filters.py  generator.py  mappers.py  sources.py  writers.py
iqgen/iqgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
iqgen/output/: 20260511_213345_test_qpsk_signal_qpsk_100000Hz_1000000Hz.cf32
iqgen/tests/: test_iq_generator.py
loop-engineering-course/: README.md  index.html
opal-vanguard/: CHRONOLOGY.md  DEVELOPER_GUIDE.md  Dockerfile  FUTURE_PLANS.md  GEMINI_RESUME.md  MANIFEST.md  SPECTERS_EDGE_PLAN.md  USER_MANUAL.md  VDF_IMPLEMENTATION_GUIDE.md  VDF_PLAN.md  debug_cfg.yaml  docker-compose.yml  tmp_final.yaml
opal-vanguard/dashboard/: app.py
opal-vanguard/legacy_archive/: CMakeLists.txt  analyze_bits.py  analyze_bits_fuzzy.py  analyze_bits_inv.py  capture_bits.py  capture_bits_agc.py  check_packetizer_bits.py  check_tune.py  config.yaml  debug_buffer.py  debug_buffer2.py  debug_fec_trunc.py  debug_session.py  debug_sync.py  debug_timing.py  dump_ofdm_bits.py  fix_gfsk_sync.py  hw_smoke_test.py  inspect_ofdm_ports.py  inspect_ofdm_streams.py  interactive_demo.py  temp_scrambler.txt  (+98 more)
transformer-course/: README.md  index.html
(+83 files in other folders)
